lab-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: lab-pv-pod
spec:
  volumes:
    - name: pv-storage
      persistentVolumeClaim:
        claimName: lab-pv-claim
  containers:
    - name: lab-pv-container
      image: httpd
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/var/www"
          name: pv-storage
