lab7-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: init-pod
  labels:
    app: initapp
spec:
  containers:
  - name: main-container
    image: busybox
    command: ['sh', '-c', 'echo main app running && sleep 3600']
