newsa-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: newsa-pod
spec:
  serviceAccountName: newsa
  containers:
  - name: alpine
    image: alpine
    command:
    - "sleep"
    - "3600"
