pod-secret-as-var.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mymysql
  namespace: default
spec:
  containers:
  - name: fake-mysql
    image: busybox
    command:
    - "sleep"
    - "3600"
