pod-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secretbox2
  namespace: default
spec:
  containers:
  - name: secretbox2
    image: busybox
    command:
      - sleep
      - "3600"
    volumeMounts:
    - mountPath: /secretstuff
      name: secret
  volumes:
  - name: secret
    secret:
      secretName: secretstuff
