selector-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: new-node-nginx
spec:
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
  nodeSelector:
    disktype: ssd
