shared-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sharedvolume
spec:
  containers:
  - name: alpine1
    image: alpine
    command:
      - sleep
      - "3600"
    volumeMounts:
      - mountPath: /alpine1
        name: test
  - name: alpine2
    image: alpine
    command:
      - sleep
      - "3600"
    volumeMounts:
      - mountPath: /alpine2
        name: test
  volumes:
    - name: test
      emptyDir: {}
